--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         alt="Italy Map"
       />
     </div> 
-
-    <div class="progress-bar" data-label="loading..."></div>
+    <title> Progress bar </title>
+    <div class="progress-bar" style="--width: 10" data-label="loading..."></div>
   </body>
 </html>
